Attempt to make "choko install" work
FossilOrigin-Name: 5b96a4d06fb91f7efa012b2cbd73223e512513e19d576e43e9e3dd5f52dff51c

--- a/.travis.yml
+++ b/.travis.yml
@@ -222,8 +222,8 @@ matrix:
         - VCDIR="/C/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/VC/Auxiliary/Build"
         - CFGOPT="CC=cl --enable-threads"
       before_install: &vcpreinst
-        - choko install make
-        - PATH="$PATH:$VCDIR"
+        - choco install -r --no-progress -y msys2 make
+        - PATH="/c/tools/msys64/usr/bin/:$PATH:$VCDIR"
         - cd ${BUILD_DIR}
       script:
         - cmd.exe /C 'vcvarsall.bat x64 && make all tcltest'
